Documentation about egn mode combiner

--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -1,7 +1,7 @@
 % Documentation of the AnnotaStruct sensor
 
 \subsubsection{\texttt{Sensor.AnnotaStruct}}
-
+\label{annotastruct}
 \paragraph{Description}
 
 The sensor allows to seamlessly modify \EuGene\ underlying graph
