--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -738,6 +738,63 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_Plotter.tex}
 \input{Doc_Tester.tex}
 
+\section{\EuGene\ as a combiner}
+
+\EuGene\ is able to integrate predictions from many sources and to combine them in one prediction.
+For that, you only need to use the AnnotaStruct plugin (see section~\ref{annotastruct}): create as many AnnotaStruct instances as files to combine.
+
+
+The parameter file \texttt{cfg/eugene.combine.par} is parametrized to combine two files. 
+In the first file, information about start and stop codons is taken into account, whereas in the second one, it is information about splice sites and CDS.
+\begin{Verbatim}[fontsize=\small]
+ ##### Sensors AnnotaStruct #####
+AnnotaStruct.FileExtension[0]      genefinder1
+AnnotaStruct.TranscriptFeature[0]  transcript
+AnnotaStruct.Start*[0]            2     # i: inline score (GFF3 format only) 
+AnnotaStruct.StartType[0]         s      # p: probability  s: score
+AnnotaStruct.Stop*[0] 1.5
+AnnotaStruct.StopType[0] s
+AnnotaStruct.Acc*[0] 0
+AnnotaStruct.AccType[0] s
+AnnotaStruct.Don*[0] 0
+AnnotaStruct.DonType[0] s
+AnnotaStruct.TrStart*[0] 0
+AnnotaStruct.TrStartType[0] s
+AnnotaStruct.TrStop*[0] 0
+AnnotaStruct.TrStopType[0] s
+AnnotaStruct.Exon*[0] 0
+AnnotaStruct.Intron*[0] 0
+AnnotaStruct.CDS*[0] 0
+AnnotaStruct.format[0]             GFF3
+\end{Verbatim}
+
+\begin{Verbatim}[fontsize=\small]
+AnnotaStruct.FileExtension[1]      genefinder2
+AnnotaStruct.TranscriptFeature[1]  transcript
+AnnotaStruct.Start*[1]            0     # i: inline score (GFF3 format only)
+AnnotaStruct.StartType[1]          s      # p: probability  s: score
+AnnotaStruct.Stop*[1] 0
+AnnotaStruct.StopType[1] s
+AnnotaStruct.Acc*[1] 3
+AnnotaStruct.AccType[1] s
+AnnotaStruct.Don*[1] 2.5
+AnnotaStruct.DonType[1] s
+AnnotaStruct.TrStart*[1] 0
+AnnotaStruct.TrStartType[1] s
+AnnotaStruct.TrStop*[1] 0
+AnnotaStruct.TrStopType[1] s
+AnnotaStruct.Exon*[1] 0
+AnnotaStruct.Intron*[1] 0
+AnnotaStruct.CDS*[1] 4
+AnnotaStruct.format[1]             GFF3
+#
+# SIGNAL/CONTENT SENSORS
+Sensor.AnnotaStruct.use 2
+#
+\end{Verbatim}
+More details about AnnotaStruct parameters in the section~\ref{annotastruct}.
+
+
 
 \section{Optimization of Plugins parameters}
 
