Add a figure to explain SO terms in the AnnotaStruct documentation

--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -253,7 +253,6 @@ Low-level information:
 \item \texttt{ins}: 	SO:0000366 (insertion\_site)
 \item \texttt{del}: 	SO:0000687 (deletion\_junction)
 \end{itemize}
-
 High-level information:
 
 Translated regions information
@@ -276,7 +275,11 @@ Transcribed region information
 \item \texttt{E.Extreme}: 	SO:0000147 (exon)	Ontology term :	SO:0000200,SO:0000202
 \item \texttt{Intron.Any}: 	SO:0000188 (intron)
 \end{itemize}
+Figure of Ontology terms
 
+\begin{figure}[h]
+\includegraphics[width=17cm]{SO.png} 
+\end{figure}
 Here an extract of : seq14ac002535g4g5.tfa.gff.gff3
 \begin{Verbatim}[fontsize=\tiny]
 seq25	EuGene	five_prime_UTR	1	2787	0	+	.	ID=five_prime_UTR:seq25.0;Ontology_term=SO:0000204
