Apply Branch_ncRNA modifications

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -731,6 +731,7 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_AnnotaStruct.tex}
 \input{Doc_IfElse.tex}
 \input{Doc_Riken.tex}
+\input{Doc_NcRNA.tex}
 
 \subsection{\texttt{Others plugins}}
 \input{Doc_GCPlot.tex}
