--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -763,9 +763,14 @@ AnnotaStruct.TrStart*[0] 0
 AnnotaStruct.TrStartType[0] s
 AnnotaStruct.TrStop*[0] 0
 AnnotaStruct.TrStopType[0] s
+AnnotaStruct.TrStartNcp*[0] 0
+AnnotaStruct.TrStartNcpType[0] s
+AnnotaStruct.TrStopNcp*[0] 0
+AnnotaStruct.TrStopNcpType[0] s
 AnnotaStruct.Exon*[0] 0
 AnnotaStruct.Intron*[0] 0
 AnnotaStruct.CDS*[0] 0
+AnnotaStruct.ncpRNA*[0]  0
 AnnotaStruct.format[0]             GFF3
 \end{Verbatim}
 
@@ -784,9 +789,14 @@ AnnotaStruct.TrStart*[1] 0
 AnnotaStruct.TrStartType[1] s
 AnnotaStruct.TrStop*[1] 0
 AnnotaStruct.TrStopType[1] s
+AnnotaStruct.TrStartNcp*[1] 0
+AnnotaStruct.TrStartNcpType[1] s
+AnnotaStruct.TrStopNcp*[1] 0
+AnnotaStruct.TrStopNcpType[1] s
 AnnotaStruct.Exon*[1] 0
 AnnotaStruct.Intron*[1] 0
 AnnotaStruct.CDS*[1] 4
+AnnotaStruct.ncpRNA*[1]  0
 AnnotaStruct.format[1]             GFF3
 #
 # SIGNAL/CONTENT SENSORS
