--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -52,6 +52,7 @@ AnnotaStruct.Exon*[0]            1
 AnnotaStruct.Intron*[0]          2
 AnnotaStruct.CDS*[0]             3
 AnnotaStruct.npcRNA*[0]          2
+AnnotaStruct.Intergenic*[0]      0
 AnnotaStruct.StartType[0]        p 
 AnnotaStruct.Start*[0]           0.1
 AnnotaStruct.StopType[0]         p 
@@ -238,7 +239,8 @@ always be interpreted as score.
 AnnotaStruct.Exon*            i
 AnnotaStruct.Intron*          i
 AnnotaStruct.CDS*             i
-nnotaStruct.npcRNA*           i
+AnnotaStruct.npcRNA*          i
+AnnotaStruct.Intergenic*      i	
 AnnotaStruct.StartType        p 
 AnnotaStruct.Start*           i
 AnnotaStruct.StopType         p 
@@ -303,6 +305,12 @@ Transcribed region information
 See  \texttt{http://www.sequenceontology.org/wiki/index.php/} \texttt{Category:SO:0000655\_!\_ncRNA} for details.
 
 \end{itemize}
+
+Intergenic information
+\begin{itemize}
+\item \texttt{interg}: SO:0000605 (intergenic_region)
+\end{itemize}
+
 Figure of Ontology terms
 
 \begin{figure}[h]
